tests/test_assets/semantic/invalid/declarations/integer_literal_boundaries.cog
I8_HIGH: i8 : 128;
I8_LOW: i8 : -129;
U8_HIGH: u8 : 256;
U8_LOW: u8 : -1;
I16_HIGH: i16 : 32768;
I16_LOW: i16 : -32769;
U16_HIGH: u16 : 65536;
U16_LOW: u16 : -1;
I32_HIGH: i32 : 2147483648;
I32_LOW: i32 : -2147483649;
U32_HIGH: u32 : 4294967296;
U32_LOW: u32 : -1;
I64_HIGH: i64 : 9223372036854775808;
I64_LOW: i64 : -9223372036854775809;
U64_LOW: u64 : -1;
