tests/test_assets/semantic/invalid/declarations/integer_literal_boundaries.expected
semantic error at line 1: constant integer value does not fit declared type
semantic error at line 2: constant integer value does not fit declared type
semantic error at line 3: constant integer value does not fit declared type
semantic error at line 4: constant integer value does not fit declared type
semantic error at line 5: constant integer value does not fit declared type
semantic error at line 6: constant integer value does not fit declared type
semantic error at line 7: constant integer value does not fit declared type
semantic error at line 8: constant integer value does not fit declared type
semantic error at line 9: constant integer value does not fit declared type
semantic error at line 10: constant integer value does not fit declared type
semantic error at line 11: constant integer value does not fit declared type
semantic error at line 12: constant integer value does not fit declared type
semantic error at line 13: constant integer value does not fit declared type
semantic error at line 14: integer overflow in constant expression
semantic error at line 15: constant integer value does not fit declared type
15 semantic errors generated.
